fix: hack around css caching for cloudflare

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,600;1,400&family=Caveat:wght@400;600&display=swap">
 
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="/public/styles/tailwind.css">
+    <link rel="stylesheet" type="text/css" href="/public/styles/tailwind.css?v=1">
 
     <!-- Favicon -->
     <link rel="icon" href="/public/images/icon.svg?=v4" type="image/x-icon">
